--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,11 @@
 buildscript {
     repositories {
-        jcenter()
+        // jcenter()
+         maven { url 'https://maven.aliyun.com/repository/public' }
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
+        maven { url 'https://jitpack.io' }
+
         google()
     }
     dependencies {
@@ -12,7 +17,11 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
+        // jcenter()
+         maven { url 'https://maven.aliyun.com/repository/public' }
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        maven { url 'https://jitpack.io' }
+        
         google()
     }
 }
